# openrouter-tui

./: .coverage  ISSUE_keyboard_interrupt_startup.md  ISSUE_massive_test_signature_mismatch.md  ISSUE_run_tests_missing_tests.md  ISSUE_stream_parsing_typeerror.md  PKGBUILD  README.md  conversation_export_20260421_132659.md  conversation_export_20260421_140913.md  main.py  openrouter-tui-0.1.0-1-any.pkg.tar.zst  openrouter-tui-debug-0.1.0-1-any.pkg.tar.zst  openrouter_client.py  pyproject.toml  requirements.txt  setup.cfg
.github/: GEMINI_PUSH.md  PULL_REQUEST_DRAFT.md
.github/workflows/: ci.yml
openrouter_tui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pkg/openrouter-tui/: .BUILDINFO  .MTREE  .PKGINFO
pkg/openrouter-tui-debug/: .BUILDINFO  .MTREE  .PKGINFO
pkg/openrouter-tui/usr/share/doc/openrouter-tui/: README.md
scripts/: gemini_push.sh
src/openrouter-tui-0.1.0/: .SRCINFO  PKGBUILD  main.py  openrouter_client.py
src/openrouter-tui-0.1.0/.gitlab/: MERGE_REQUEST_DRAFT.md
src/openrouter-tui-0.1.0/scripts/: makepkg-local.sh
tests/: test_main.py  test_massive.py  test_openrouter_client.py  test_smoke.py  test_thousands.py  test_ui.py
