[metadata]
name = openrouter-tui
version = 0.1.0
description = Terminal chat client for OpenRouter API
author = Natalie Spiva
author_email = natalie@acreetionos.org
license = MIT
project_urls =
    Homepage = https://github.com/spivanatalie64/openrouter-tui
    Bug Tracker = https://acreetionos.org/contact.html


[options]
packages = find:
install_requires =
    requests>=2.0
    prompt_toolkit>=3.0

[options.packages.find]
where = .
